# AgentSafety

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MODEL_EVALUATION_TRACKER.md  Makefile  README.md  RELEASE_NOTES.md  policy.md  pyproject.toml  test_main.py  test_pydantic.py
datasets/: code-agent-v0.1.jsonl
reports/: .gitignore  meta-report.md  report-120b-v0.1-20260309-233658.md  report-120b-v0.1-20260310-000059.md  report-30b-v0.1-20260309-003431.md  report-gemini-2.5-flash-lite-preview-09-2025-v0.1-20260310-203831.md  report-gemini-2.5-flash-lite-v0.1-20260310-203320.md  report-gemini-2.5-flash-v0.1-20260308-190642.md  report-gemini-2.5-pro-v0.1-20260310-202620.md  report-gemini-3-flash-preview-v0.1-20260310-205919.md  report-gemini-3-pro-preview-v0.1-20260310-204718.md  report-gemini-3.1-flash-lite-preview-v0.1-20260310-210847.md  report-gemini-3.1-pro-preview-v0.1-20260308-191103.md  report-gpt-4.1-mini-v0.1-20260310-180824.md  report-gpt-4.1-nano-v0.1-20260310-181012.md  report-gpt-4.1-v0.1-20260310-180526.md  report-gpt-5-codex-v0.1-20260309-210337.md  report-gpt-5-mini-v0.1-20260309-215559.md  report-gpt-5-nano-v0.1-20260309-221007.md  report-gpt-5-v0.1-20260309-214238.md  report-gpt-5.1-codex-max-v0.1-20260309-202003.md  report-gpt-5.1-codex-mini-v0.1-20260309-225251.md  report-gpt-5.1-codex-v0.1-20260309-201741.md  report-gpt-5.1-v0.1-20260309-211315.md  report-gpt-5.2-codex-v0.1-20260309-201401.md  report-gpt-5.2-pro-v0.1-20260309-192620.md  report-gpt-5.2-v0.1-20260309-210820.md  report-gpt-5.3-codex-v0.1-20260308-235013.md  report-v0.1-template.md  (+9 more)
(+5 files in other folders)
